# anotacoes-reestimativa-2026

./: mkdocs.yml  pyproject.toml  zensical.toml
docs/: index.md
site/: 404.html  index.html  search.json  sitemap.xml
site/blog/: index.html
site/markdown/: index.html
