[project]
name = "notas"
version = "0.1.0"
description = ""
authors = [
    {name = "Maria Duque",email = "maria.oliveira.duque@gmail.com"}
]
requires-python = ">=3.12"
dependencies = [
    "mkdocs (>=1.6.1,<2.0.0)",
    "zensical (>=0.0.24,<0.0.25)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "mkdocs-material (>=9.7.3,<10.0.0)"
]
