[project]
name = "repositorio-pessoal"
version = "0.1.0"
description = ""
authors = [
    {name = "Maria Duque",email = "maria.oliveira.duque@gmail.com"}
]
requires-python = ">=3.12"
dependencies = [
    "zensical (>=0.0.26,<0.0.27)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
